# xml-struct-rs

./: Cargo.toml  README.md
xml_struct/: Cargo.toml
xml_struct/src/: impls.rs  lib.rs  tests.rs
xml_struct_derive/: Cargo.toml
xml_struct_derive/src/: lib.rs  properties.rs  serialize.rs
xml_struct_derive/src/serialize/: codegen.rs
xml_struct_tests/: Cargo.toml
xml_struct_tests/integration/: core.rs  enum.rs  lib.rs  struct.rs  text_enum.rs  tuple_struct.rs  unit_struct.rs
xml_struct_tests/src/: lib.rs
xml_struct_tests/ui/: lib.rs
xml_struct_tests/ui/test_cases/type_properties/: invalid_attributes.rs  invalid_attributes.stderr  multiple_defaults.rs  multiple_defaults.stderr  no_properties.rs  text_enum.rs  text_enum_with_namespaces.rs  text_enum_with_namespaces.stderr  text_enum_with_non_unit_variants.rs  text_enum_with_non_unit_variants.stderr  text_struct.rs  text_struct.stderr  valid_namespaces.rs
